--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-server.port=90
-spring.datasource.url = jdbc:mysql://localhost/tienda?serverTimezone=UTC
+server.port=80
+spring.datasource.url = jdbc:mysql://localhost/Turisteando?serverTimezone=UTC
 spring.datasource.username = root
-spring.datasource.password = changePassword
+spring.datasource.password = sCZL3N*0Cdj$23C
 spring.datasource.drive-class-name = com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform = org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto =  update
