--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,12 @@
                                                     <artifactId>spring-boot-starter-data-jpa</artifactId>
                                                     <version>3.0.2</version>
                                     </dependency>
+	 <dependency>
+	  <groupId>jakarta.validation</groupId>
+	  <artifactId>jakarta.validation-api</artifactId>
+	  <version>2.0.1</version>
+	  <type>jar</type>
+	 </dependency>
 	</dependencies>
 
 	<build>
