--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,11 @@
                 <dependency>
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-starter-data-jpa</artifactId>
-                    <version>3.0.2</version>
+                </dependency>
+                
+                <dependency>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-thymeleaf</artifactId>
                 </dependency>
                 
                 <dependency>
@@ -60,18 +64,22 @@
                 
                 <dependency>
                     
-	  <groupId>jakarta.validation</groupId>
-	  <artifactId>jakarta.validation-api</artifactId>
-	  <version>2.0.1</version>
-	  <type>jar</type>
-	 </dependency>
-	 <dependency>
-	  <groupId>com.mysql</groupId>
-	  <artifactId>mysql-connector-j</artifactId>
-	  <version>8.0.32</version>
-	  <scope>test</scope>
-	 </dependency>
-	</dependencies>
+                    <groupId>jakarta.validation</groupId>
+                    <artifactId>jakarta.validation-api</artifactId>
+                    <version>2.0.1</version>
+                    <type>jar</type>
+                </dependency>
+                
+
+                
+                
+                <dependency>
+                    <groupId>com.mysql</groupId>
+                    <artifactId>mysql-connector-j</artifactId>
+                    <version>8.0.32</version>
+                    <scope>test</scope>
+                </dependency>
+        </dependencies>
 
         <build>
             <plugins>
