Revert "Fran commit"
This reverts commit 164bca7d28f855207bd5851116d64e3a757a8303.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.jpa.database-platform = org.hibernate.dialect.MySQLDialect
 
 spring.jpa.hibernate.ddl-auto = update 
 
+spring.security.user.name = Turisteando@gmail.com
+spring.security.user.password = turisteando123
