--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<name>Turisteando</name>
 	<description>Turisteando proyecto final</description>
 	<properties>
-		<java.version>19</java.version>
+		<java.version>17</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -36,28 +36,49 @@
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
-                                    <dependency>
-                                                     <groupId>mysql</groupId>
-                                                     <artifactId>mysql-connector-java</artifactId>
-                                                     <version>8.0.25</version>
-                                    </dependency>
-                                    <dependency>
-                                                    <groupId>org.springframework.boot</groupId>
-                                                    <artifactId>spring-boot-starter-data-jpa</artifactId>
-                                                    <version>3.0.2</version>
-                                    </dependency>
-	 <dependency>
-	  <groupId>jakarta.validation</groupId>
-	  <artifactId>jakarta.validation-api</artifactId>
-	  <version>2.0.1</version>
-	  <type>jar</type>
-	 </dependency>
+                </dependency>
+                <dependency>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-test</artifactId>
+                    <scope>test</scope>
+                </dependency>
+  
+                <dependency>
+                    <groupId>org.springframework.security</groupId>
+                    <artifactId>spring-security-config</artifactId>
+                    <version>5.6.0</version>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.springframework.security</groupId>
+                    <artifactId>spring-security-web</artifactId>
+                    <version>5.6.0</version>
+                </dependency>
+
+                                
+                
+                <dependency>
+                    <groupId>org.hibernate</groupId>
+                    <artifactId>hibernate-core</artifactId>
+                    <version>6.2.1.Final</version>
+                </dependency>
+                
+                <dependency>
+                    <groupId>mysql</groupId>
+                    <artifactId>mysql-connector-java</artifactId>
+                    <version>8.0.25</version>
+                </dependency>
+                <dependency>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-data-jpa</artifactId>
+                    <version>3.0.2</version>
+                </dependency>
+                <dependency>
+                    <groupId>jakarta.validation</groupId>
+                    <artifactId>jakarta.validation-api</artifactId>
+                    <version>2.0.1</version>
+                    <type>jar</type>
+                </dependency>
 	</dependencies>
 
 	<build>
