--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,8 @@
-server.port=90
+server.port=80
 spring.datasource.url = jdbc:mysql://localhost/db_ejemplo?serverTimezone=UTC
 spring.datasource.username =root
-spring.datasource.password =Lesco31@
+spring.datasource.password =Juegospira34532@
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 
 
 spring.jpa.hibernate.ddl-auto = update 
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.main.allow-bean-definition-overriding=true
