--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,6 @@ spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto = update 
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
-logging.level.org.hibernate.SQL= DEBUG
+server.error.whitelabel.enabled=false
 logging.level.org.hibernate.type= TRACE
-
 
